--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "classnames": "^2.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -31,5 +32,4 @@
     "vite": "^7.0.0"
   },
   "homepage": "https://Dimon-Vl.github.io/meteo-weather"
-  
 }
